# QueryLeaf

./: Procfile  README.md  app.py  main.py  pyproject.toml  requirements.txt
templates/: index.html
